# OOP

./: main.c
DynamicArray/: DynamicArray.c  DynamicArray.h
Estate/: Estate.c  Estate.h
Lab2-3/: CMakeLists.txt
Lab2-3/Controller/: Controller.c  Controller.h
Lab2-3/Operation/: Operation.c  Operation.h
Lab2-3/OperationStack/: OperationStack.c
Lab2-3/Repository/: Repository.h
Lab2-3/UI/: UI.c
OperationStack/: OperationStack.h
Repository/: Repository.c
Tests/: Tests.c  Tests.h
UI/: UI.h
